manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    app: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
      nodePort: 30008
